--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,6 @@
-Django==3.9.6
+Django==3.2.4
 djangorestframework==3.12.4
+gunicorn==20.1.0
+psycopg2-binary==2.9.1
+pytest==6.2.4
+pytest-django==4.4.0
