--- a/Dockerfile.prod
+++ b/Dockerfile.prod
@@ -1,3 +1,7 @@
+###########
+# BUILDER #
+###########
+
 # pull official base image
 FROM python:3.9.5-slim-buster
 
@@ -7,22 +11,57 @@ WORKDIR /usr/src/app
 # set environment variables
 ENV PYTHONDONTWRITEBYTECODE 1
 ENV PYTHONUNBUFFERED 1
-ENV DEBUG 0
-ENV SECRET_KEY foo
-ENV DJANGO_ALLOWED_HOSTS localhost 127.0.0.1 [::1]
 
 # install system dependencies
 RUN apt-get update \
   && apt-get -y install gcc postgresql \
   && apt-get clean
 
-# add and install requirements
+# install dependencies
 RUN pip install --upgrade pip
 COPY ./requirements.txt .
-RUN pip install -r requirements.txt
+RUN pip wheel --no-cache-dir --no-deps --wheel-dir /usr/src/app/wheels -r requirements.txt
 
-# add app
+# lint
 COPY . .
+RUN pip install black==21.6b0 flake8===3.9.2 isort==5.9.1
+RUN flake8 .
+RUN black . --check --exclude=migrations
+RUN isort . --check-only
+
+#########
+# FINAL #
+#########
+
+# pull official base image
+FROM python:3.9.5-slim-buster
+
+# set work directory
+WORKDIR /usr/src/app
+
+# set environment variables
+ENV PYTHONDONTWRITEBYTECODE 1
+ENV PYTHONUNBUFFERED 1
+ENV DEBUG 0
+ENV SECRET_KEY $SECRET_KEY
+ENV DJANGO_ALLOWED_HOSTS .herokuapp.com
+
+# install system dependencies
+RUN apt-get update \
+  && apt-get -y install gcc postgresql \
+  && apt-get clean
+
+# install dependencies
+COPY --from=builder /usr/src/app/wheels /wheels
+COPY --from=builder /usr/src/app/requirements.txt .
+RUN pip install --upgrade pip
+RUN pip install --no-cache /wheels/*
+
+# copy project
+COPY . .
+
+# collect static files
+RUN python manage.py collectstatic --noinput
 
 # add and run as non-root user
 RUN adduser --disabled-password myuser
